[project]
name = "flex-workspace"
version = "2.0.0a1"
description = "Development workspace for the FLEX platform (not a distributable package)"
requires-python = ">=3.11"
dependencies = [
    "flex",
    "flex-drivers",
    "flex-drivers-levylab",
    "flex-nextcloud",
    "flex-asana",
    "flex-tdms",
    "flex-dashboard",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
flex = { workspace = true }
flex-core = { workspace = true }
flex-protocols = { workspace = true }
flex-db = { workspace = true }
flex-exp = { workspace = true }
flex-drivers = { workspace = true }
flex-drivers-levylab = { workspace = true }
flex-nextcloud = { workspace = true }
flex-asana = { workspace = true }
flex-tdms = { workspace = true }
flex-dashboard = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "flex",
    "flex_protocols",
    "flex_db",
    "flex_exp",
    "flex_drivers",
    "flex_drivers_levylab",
    "flex_nextcloud",
    "flex_asana",
    "flex_tdms",
    "flex_dashboard",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q"
