[project]
name = "flex-workspace"
version = "2.0.0a1"
description = "Development workspace for the FLEX platform (not a distributable package)"
requires-python = ">=3.11"
dependencies = [
    "flex",
    "flex-protocols[all]",
    "flex-db[postgres]",
    "flex-drivers",
    "flex-datatypes",
    "flex-nextcloud",
    "flex-asana",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "httpx>=0.27",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    # gen-files 0.6 / literate-nav 0.6.3 grew a dependency on "properdocs",
    # an mkdocs fork that prints switch-away ads at build time; pin the last
    # clean releases.
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
flex = { workspace = true }
flex-core = { workspace = true }
flex-protocols = { workspace = true }
flex-db = { workspace = true }
flex-exp = { workspace = true }
flex-drivers = { workspace = true }
flex-datatypes = { workspace = true }
flex-nextcloud = { workspace = true }
flex-asana = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.isort]
known-first-party = [
    "flex",
    "flex_protocols",
    "flex_db",
    "flex_exp",
    "flex_drivers",
    "flex_datatypes",
    "flex_nextcloud",
    "flex_asana",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q"
